[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/editor_menu/editor_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/panel/panel_blue.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/fonts/data/kenney_thick.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/button_blue/button_blue.tres" type="Theme" id=4]
[ext_resource path="res://assets/ui/fonts/font_small_button.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/ui/fonts/data/kenney_pixel_square.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_left = 16.0
margin_right = 16.0
margin_top = 16.0
margin_bottom = 24.0

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[node name="EditorMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Control"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 128.0
margin_right = -128.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ContainerMaps" type="VBoxContainer" parent="Control/PanelContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 752.0
margin_bottom = 336.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblPlaceholder" type="Label" parent="Control/PanelContainer/ContainerMaps"]
margin_top = 148.0
margin_right = 736.0
margin_bottom = 172.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/font = SubResource( 3 )
text = "LOADING MAPS..."
align = 1
valign = 1

[node name="BtnCreate" type="Button" parent="Control"]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 412.0
margin_top = 39.0
margin_right = -428.0
margin_bottom = -17.8
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Create new map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblTitle" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 0.2
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/font = SubResource( 2 )
text = "Editor"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnBack" type="Button" parent="Control"]
margin_right = 51.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/BtnCreate" to="." method="_on_BtnCreate_pressed"]
